[tool.poetry]
name = "autonomous_car_simulation"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.8.0"
numpy = "^1.20.1"
Pillow = "^8.1.2"
torchvision = "^0.9.0"
matplotlib = "^3.3.4"
pandas = "^1.2.3"
scipy = "^1.6.1"
ujson = "^4.0.2"
plotly = "^4.14.3"
socketio = "^0.2.1"
eventlet = "^0.30.2"
Flask = "^1.1.2"
python-socketio = "^5.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
